syntax = "proto3";

package users.v1.dto;

option php_namespace = "GRPC\\Services\\Users\\v1";
option php_metadata_namespace = "GRPC\\ProtobufMetadata\\Users\\v1";

import "google/protobuf/timestamp.proto";

message User {
  string uuid = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}